// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video 1`] = `
<div
  className="video__outer-container"
>
  <div
    className="video__inner-container"
  >
    <div
      className="video__container"
    >
      <div
        className="video__header"
      >
        <p
          className="video__date"
        >
          2016-10-09
        </p>
      </div>
      <YouTube
        className="video__video"
        onPause={[Function]}
        onReady={[Function]}
        onStateChange={[Function]}
        opts={
          Object {
            "height": "315",
            "playerVars": Object {
              "autoplay": 1,
              "cc_lang_pref": "en",
              "cc_load_policy": 1,
              "controls": 0,
              "modestbranding": 1,
              "playsinline": 1,
              "rel": 0,
              "showinfo": 0,
              "start": 0,
            },
            "width": "560",
          }
        }
        videoId="ApTLB76Nmdg"
      />
    </div>
    <CaptionView
      captionIsHighlighted={false}
      clipEnd={0}
      clipStart={0}
      eventHandlers={
        Object {
          "onClearPress": [Function],
          "onCursorPlace": [Function],
          "onFineTuneDown": [Function],
          "onFineTuneUp": [Function],
          "onHighlight": [Function],
          "onPlayPausePress": [Function],
          "onRangeChange": [Function],
          "onRestartPress": [Function],
        }
      }
      highlightedCharRange={
        Array [
          -1,
          -1,
        ]
      }
      isPaused={true}
      timer={0}
      videoDuration={5224}
      videoFact={
        Object {
          "fact": Object {
            "kind": "video",
            "primaryDate": "2016-10-09",
            "primaryDateKind": "recorded",
            "title": "Donald Trump - Hillary Clinton (2/3)",
          },
          "speakerMap": Array [
            Object {
              "range": Array [
                0,
                7,
              ],
              "speaker": "Raddatz",
            },
            Object {
              "range": Array [
                8,
                89,
              ],
              "speaker": "Cooper",
            },
          ],
          "speakers": Array [
            Object {
              "firstname": "Martha",
              "lastname": "Raddatz",
            },
            Object {
              "firstname": "Anderson",
              "lastname": "Cooper",
            },
          ],
          "transcript": Array [
            Object {
              "idx": 0,
              "timestamp": 0.75,
              "word": "Good ",
            },
            Object {
              "idx": 1,
              "timestamp": 0.96,
              "word": "evening ",
            },
            Object {
              "idx": 2,
              "timestamp": 1.56,
              "word": "I'm ",
            },
            Object {
              "idx": 3,
              "timestamp": 1.92,
              "word": "Martha ",
            },
            Object {
              "idx": 4,
              "timestamp": 2.129,
              "word": "Raddatz ",
            },
            Object {
              "idx": 5,
              "timestamp": 2.52,
              "word": "from ",
            },
            Object {
              "idx": 6,
              "timestamp": 3.06,
              "word": "ABC ",
            },
            Object {
              "idx": 7,
              "timestamp": 3.09,
              "word": "News. ",
            },
            Object {
              "idx": 8,
              "timestamp": 3.659,
              "word": "And ",
            },
            Object {
              "idx": 9,
              "timestamp": 3.87,
              "word": "I'm ",
            },
            Object {
              "idx": 10,
              "timestamp": 4.259,
              "word": "Anderson ",
            },
            Object {
              "idx": 11,
              "timestamp": 4.529,
              "word": "Cooper ",
            },
            Object {
              "idx": 12,
              "timestamp": 4.68,
              "word": "from ",
            },
            Object {
              "idx": 13,
              "timestamp": 5.1,
              "word": "CNN. ",
            },
            Object {
              "idx": 14,
              "timestamp": 5.31,
              "word": "We ",
            },
            Object {
              "idx": 15,
              "timestamp": 5.49,
              "word": "want ",
            },
            Object {
              "idx": 16,
              "timestamp": 5.549,
              "word": "to ",
            },
            Object {
              "idx": 17,
              "timestamp": 5.7,
              "word": "welcome ",
            },
            Object {
              "idx": 18,
              "timestamp": 5.879,
              "word": "you ",
            },
            Object {
              "idx": 19,
              "timestamp": 6.089,
              "word": "to ",
            },
            Object {
              "idx": 20,
              "timestamp": 6.24,
              "word": "Washington ",
            },
            Object {
              "idx": 21,
              "timestamp": 7.2,
              "word": "University ",
            },
            Object {
              "idx": 22,
              "timestamp": 7.29,
              "word": "in ",
            },
            Object {
              "idx": 23,
              "timestamp": 7.529,
              "word": "St. ",
            },
            Object {
              "idx": 24,
              "timestamp": 7.799,
              "word": "Louis ",
            },
            Object {
              "idx": 25,
              "timestamp": 8.01,
              "word": "for ",
            },
            Object {
              "idx": 26,
              "timestamp": 8.429,
              "word": "the ",
            },
            Object {
              "idx": 27,
              "timestamp": 8.88,
              "word": "second ",
            },
            Object {
              "idx": 28,
              "timestamp": 9.24,
              "word": "presidential ",
            },
            Object {
              "idx": 29,
              "timestamp": 9.69,
              "word": "debate ",
            },
            Object {
              "idx": 30,
              "timestamp": 9.719,
              "word": "between ",
            },
            Object {
              "idx": 31,
              "timestamp": 10.29,
              "word": "Hillary ",
            },
            Object {
              "idx": 32,
              "timestamp": 10.32,
              "word": "Clinton ",
            },
            Object {
              "idx": 33,
              "timestamp": 10.679,
              "word": "and ",
            },
            Object {
              "idx": 34,
              "timestamp": 10.889,
              "word": "Donald ",
            },
            Object {
              "idx": 35,
              "timestamp": 11.389,
              "word": "Trump ",
            },
            Object {
              "idx": 36,
              "timestamp": 12.389,
              "word": "sponsored ",
            },
            Object {
              "idx": 37,
              "timestamp": 12.48,
              "word": "by ",
            },
            Object {
              "idx": 38,
              "timestamp": 12.54,
              "word": "the ",
            },
            Object {
              "idx": 39,
              "timestamp": 12.99,
              "word": "Commission ",
            },
            Object {
              "idx": 40,
              "timestamp": 13.08,
              "word": "on ",
            },
            Object {
              "idx": 41,
              "timestamp": 13.65,
              "word": "Presidential ",
            },
            Object {
              "idx": 42,
              "timestamp": 13.88,
              "word": "Debates. ",
            },
            Object {
              "idx": 43,
              "timestamp": 14.88,
              "word": "tonight's ",
            },
            Object {
              "idx": 44,
              "timestamp": 15.15,
              "word": "debate ",
            },
            Object {
              "idx": 45,
              "timestamp": 15.389,
              "word": "is ",
            },
            Object {
              "idx": 46,
              "timestamp": 15.45,
              "word": "a ",
            },
            Object {
              "idx": 47,
              "timestamp": 15.87,
              "word": "Town ",
            },
            Object {
              "idx": 48,
              "timestamp": 16.109,
              "word": "Hall ",
            },
            Object {
              "idx": 49,
              "timestamp": 16.139,
              "word": "format, ",
            },
            Object {
              "idx": 50,
              "timestamp": 16.8,
              "word": "which ",
            },
            Object {
              "idx": 51,
              "timestamp": 17.01,
              "word": "gives ",
            },
            Object {
              "idx": 52,
              "timestamp": 17.43,
              "word": "voters ",
            },
            Object {
              "idx": 53,
              "timestamp": 17.46,
              "word": "a ",
            },
            Object {
              "idx": 54,
              "timestamp": 17.609,
              "word": "chance ",
            },
            Object {
              "idx": 55,
              "timestamp": 18.119,
              "word": "to ",
            },
            Object {
              "idx": 56,
              "timestamp": 18.63,
              "word": "directly ",
            },
            Object {
              "idx": 57,
              "timestamp": 18.81,
              "word": "ask ",
            },
            Object {
              "idx": 58,
              "timestamp": 18.99,
              "word": "the ",
            },
            Object {
              "idx": 59,
              "timestamp": 19.41,
              "word": "candidates ",
            },
            Object {
              "idx": 60,
              "timestamp": 19.789,
              "word": "questions. ",
            },
            Object {
              "idx": 61,
              "timestamp": 20.789,
              "word": "Martha ",
            },
            Object {
              "idx": 62,
              "timestamp": 20.88,
              "word": "and ",
            },
            Object {
              "idx": 63,
              "timestamp": 20.939,
              "word": "I ",
            },
            Object {
              "idx": 64,
              "timestamp": 21.15,
              "word": "will ",
            },
            Object {
              "idx": 65,
              "timestamp": 21.3,
              "word": "ask ",
            },
            Object {
              "idx": 66,
              "timestamp": 21.689,
              "word": "follow-up ",
            },
            Object {
              "idx": 67,
              "timestamp": 21.81,
              "word": "questions ",
            },
            Object {
              "idx": 68,
              "timestamp": 22.47,
              "word": "but ",
            },
            Object {
              "idx": 69,
              "timestamp": 22.59,
              "word": "the ",
            },
            Object {
              "idx": 70,
              "timestamp": 22.769,
              "word": "night ",
            },
            Object {
              "idx": 71,
              "timestamp": 23.039,
              "word": "really ",
            },
            Object {
              "idx": 72,
              "timestamp": 23.46,
              "word": "belongs ",
            },
            Object {
              "idx": 73,
              "timestamp": 23.76,
              "word": "to ",
            },
            Object {
              "idx": 74,
              "timestamp": 23.85,
              "word": "the ",
            },
            Object {
              "idx": 75,
              "timestamp": 24.15,
              "word": "people ",
            },
            Object {
              "idx": 76,
              "timestamp": 24.24,
              "word": "in ",
            },
            Object {
              "idx": 77,
              "timestamp": 24.39,
              "word": "this ",
            },
            Object {
              "idx": 78,
              "timestamp": 24.689,
              "word": "room ",
            },
            Object {
              "idx": 79,
              "timestamp": 24.99,
              "word": "and ",
            },
            Object {
              "idx": 80,
              "timestamp": 25.019,
              "word": "to ",
            },
            Object {
              "idx": 81,
              "timestamp": 25.71,
              "word": "people ",
            },
            Object {
              "idx": 82,
              "timestamp": 25.8,
              "word": "across ",
            },
            Object {
              "idx": 83,
              "timestamp": 26.13,
              "word": "the ",
            },
            Object {
              "idx": 84,
              "timestamp": 26.31,
              "word": "country ",
            },
            Object {
              "idx": 85,
              "timestamp": 26.64,
              "word": "who ",
            },
            Object {
              "idx": 86,
              "timestamp": 26.67,
              "word": "have ",
            },
            Object {
              "idx": 87,
              "timestamp": 26.939,
              "word": "submitted ",
            },
            Object {
              "idx": 88,
              "timestamp": 27.51,
              "word": "questions ",
            },
            Object {
              "idx": 89,
              "timestamp": 28.17,
              "word": "online. ",
            },
          ],
          "youtubeId": "ApTLB76Nmdg",
        }
      }
    />
  </div>
</div>
`;

exports[`Video with highlights 1`] = `
<div
  className="video__outer-container"
>
  <div
    className="video__inner-container"
  >
    <div
      className="video__container"
    >
      <div
        className="video__header"
      >
        <button
          className="video__button video__button--top"
          onClick={[Function]}
        >
          Give your Take on this
        </button>
        <p
          className="video__date"
        >
          2016-10-09
        </p>
      </div>
      <YouTube
        className="video__video"
        onPause={[Function]}
        onReady={[Function]}
        onStateChange={[Function]}
        opts={
          Object {
            "height": "315",
            "playerVars": Object {
              "autoplay": 1,
              "cc_lang_pref": "en",
              "cc_load_policy": 1,
              "controls": 0,
              "end": 3,
              "modestbranding": 1,
              "playsinline": 1,
              "rel": 0,
              "showinfo": 0,
              "start": 0,
            },
            "width": "560",
          }
        }
        videoId="ApTLB76Nmdg"
      />
    </div>
    <CaptionView
      captionIsHighlighted={true}
      clipEnd={3}
      clipStart={0}
      eventHandlers={
        Object {
          "onClearPress": [Function],
          "onCursorPlace": [Function],
          "onFineTuneDown": [Function],
          "onFineTuneUp": [Function],
          "onHighlight": [Function],
          "onPlayPausePress": [Function],
          "onRangeChange": [Function],
          "onRestartPress": [Function],
        }
      }
      highlightedCharRange={
        Array [
          0,
          37,
        ]
      }
      isPaused={true}
      timer={0}
      videoDuration={5224}
      videoFact={
        Object {
          "fact": Object {
            "kind": "video",
            "primaryDate": "2016-10-09",
            "primaryDateKind": "recorded",
            "title": "Donald Trump - Hillary Clinton (2/3)",
          },
          "speakerMap": Array [
            Object {
              "range": Array [
                0,
                7,
              ],
              "speaker": "Raddatz",
            },
            Object {
              "range": Array [
                8,
                89,
              ],
              "speaker": "Cooper",
            },
          ],
          "speakers": Array [
            Object {
              "firstname": "Martha",
              "lastname": "Raddatz",
            },
            Object {
              "firstname": "Anderson",
              "lastname": "Cooper",
            },
          ],
          "transcript": Array [
            Object {
              "idx": 0,
              "timestamp": 0.75,
              "word": "Good ",
            },
            Object {
              "idx": 1,
              "timestamp": 0.96,
              "word": "evening ",
            },
            Object {
              "idx": 2,
              "timestamp": 1.56,
              "word": "I'm ",
            },
            Object {
              "idx": 3,
              "timestamp": 1.92,
              "word": "Martha ",
            },
            Object {
              "idx": 4,
              "timestamp": 2.129,
              "word": "Raddatz ",
            },
            Object {
              "idx": 5,
              "timestamp": 2.52,
              "word": "from ",
            },
            Object {
              "idx": 6,
              "timestamp": 3.06,
              "word": "ABC ",
            },
            Object {
              "idx": 7,
              "timestamp": 3.09,
              "word": "News. ",
            },
            Object {
              "idx": 8,
              "timestamp": 3.659,
              "word": "And ",
            },
            Object {
              "idx": 9,
              "timestamp": 3.87,
              "word": "I'm ",
            },
            Object {
              "idx": 10,
              "timestamp": 4.259,
              "word": "Anderson ",
            },
            Object {
              "idx": 11,
              "timestamp": 4.529,
              "word": "Cooper ",
            },
            Object {
              "idx": 12,
              "timestamp": 4.68,
              "word": "from ",
            },
            Object {
              "idx": 13,
              "timestamp": 5.1,
              "word": "CNN. ",
            },
            Object {
              "idx": 14,
              "timestamp": 5.31,
              "word": "We ",
            },
            Object {
              "idx": 15,
              "timestamp": 5.49,
              "word": "want ",
            },
            Object {
              "idx": 16,
              "timestamp": 5.549,
              "word": "to ",
            },
            Object {
              "idx": 17,
              "timestamp": 5.7,
              "word": "welcome ",
            },
            Object {
              "idx": 18,
              "timestamp": 5.879,
              "word": "you ",
            },
            Object {
              "idx": 19,
              "timestamp": 6.089,
              "word": "to ",
            },
            Object {
              "idx": 20,
              "timestamp": 6.24,
              "word": "Washington ",
            },
            Object {
              "idx": 21,
              "timestamp": 7.2,
              "word": "University ",
            },
            Object {
              "idx": 22,
              "timestamp": 7.29,
              "word": "in ",
            },
            Object {
              "idx": 23,
              "timestamp": 7.529,
              "word": "St. ",
            },
            Object {
              "idx": 24,
              "timestamp": 7.799,
              "word": "Louis ",
            },
            Object {
              "idx": 25,
              "timestamp": 8.01,
              "word": "for ",
            },
            Object {
              "idx": 26,
              "timestamp": 8.429,
              "word": "the ",
            },
            Object {
              "idx": 27,
              "timestamp": 8.88,
              "word": "second ",
            },
            Object {
              "idx": 28,
              "timestamp": 9.24,
              "word": "presidential ",
            },
            Object {
              "idx": 29,
              "timestamp": 9.69,
              "word": "debate ",
            },
            Object {
              "idx": 30,
              "timestamp": 9.719,
              "word": "between ",
            },
            Object {
              "idx": 31,
              "timestamp": 10.29,
              "word": "Hillary ",
            },
            Object {
              "idx": 32,
              "timestamp": 10.32,
              "word": "Clinton ",
            },
            Object {
              "idx": 33,
              "timestamp": 10.679,
              "word": "and ",
            },
            Object {
              "idx": 34,
              "timestamp": 10.889,
              "word": "Donald ",
            },
            Object {
              "idx": 35,
              "timestamp": 11.389,
              "word": "Trump ",
            },
            Object {
              "idx": 36,
              "timestamp": 12.389,
              "word": "sponsored ",
            },
            Object {
              "idx": 37,
              "timestamp": 12.48,
              "word": "by ",
            },
            Object {
              "idx": 38,
              "timestamp": 12.54,
              "word": "the ",
            },
            Object {
              "idx": 39,
              "timestamp": 12.99,
              "word": "Commission ",
            },
            Object {
              "idx": 40,
              "timestamp": 13.08,
              "word": "on ",
            },
            Object {
              "idx": 41,
              "timestamp": 13.65,
              "word": "Presidential ",
            },
            Object {
              "idx": 42,
              "timestamp": 13.88,
              "word": "Debates. ",
            },
            Object {
              "idx": 43,
              "timestamp": 14.88,
              "word": "tonight's ",
            },
            Object {
              "idx": 44,
              "timestamp": 15.15,
              "word": "debate ",
            },
            Object {
              "idx": 45,
              "timestamp": 15.389,
              "word": "is ",
            },
            Object {
              "idx": 46,
              "timestamp": 15.45,
              "word": "a ",
            },
            Object {
              "idx": 47,
              "timestamp": 15.87,
              "word": "Town ",
            },
            Object {
              "idx": 48,
              "timestamp": 16.109,
              "word": "Hall ",
            },
            Object {
              "idx": 49,
              "timestamp": 16.139,
              "word": "format, ",
            },
            Object {
              "idx": 50,
              "timestamp": 16.8,
              "word": "which ",
            },
            Object {
              "idx": 51,
              "timestamp": 17.01,
              "word": "gives ",
            },
            Object {
              "idx": 52,
              "timestamp": 17.43,
              "word": "voters ",
            },
            Object {
              "idx": 53,
              "timestamp": 17.46,
              "word": "a ",
            },
            Object {
              "idx": 54,
              "timestamp": 17.609,
              "word": "chance ",
            },
            Object {
              "idx": 55,
              "timestamp": 18.119,
              "word": "to ",
            },
            Object {
              "idx": 56,
              "timestamp": 18.63,
              "word": "directly ",
            },
            Object {
              "idx": 57,
              "timestamp": 18.81,
              "word": "ask ",
            },
            Object {
              "idx": 58,
              "timestamp": 18.99,
              "word": "the ",
            },
            Object {
              "idx": 59,
              "timestamp": 19.41,
              "word": "candidates ",
            },
            Object {
              "idx": 60,
              "timestamp": 19.789,
              "word": "questions. ",
            },
            Object {
              "idx": 61,
              "timestamp": 20.789,
              "word": "Martha ",
            },
            Object {
              "idx": 62,
              "timestamp": 20.88,
              "word": "and ",
            },
            Object {
              "idx": 63,
              "timestamp": 20.939,
              "word": "I ",
            },
            Object {
              "idx": 64,
              "timestamp": 21.15,
              "word": "will ",
            },
            Object {
              "idx": 65,
              "timestamp": 21.3,
              "word": "ask ",
            },
            Object {
              "idx": 66,
              "timestamp": 21.689,
              "word": "follow-up ",
            },
            Object {
              "idx": 67,
              "timestamp": 21.81,
              "word": "questions ",
            },
            Object {
              "idx": 68,
              "timestamp": 22.47,
              "word": "but ",
            },
            Object {
              "idx": 69,
              "timestamp": 22.59,
              "word": "the ",
            },
            Object {
              "idx": 70,
              "timestamp": 22.769,
              "word": "night ",
            },
            Object {
              "idx": 71,
              "timestamp": 23.039,
              "word": "really ",
            },
            Object {
              "idx": 72,
              "timestamp": 23.46,
              "word": "belongs ",
            },
            Object {
              "idx": 73,
              "timestamp": 23.76,
              "word": "to ",
            },
            Object {
              "idx": 74,
              "timestamp": 23.85,
              "word": "the ",
            },
            Object {
              "idx": 75,
              "timestamp": 24.15,
              "word": "people ",
            },
            Object {
              "idx": 76,
              "timestamp": 24.24,
              "word": "in ",
            },
            Object {
              "idx": 77,
              "timestamp": 24.39,
              "word": "this ",
            },
            Object {
              "idx": 78,
              "timestamp": 24.689,
              "word": "room ",
            },
            Object {
              "idx": 79,
              "timestamp": 24.99,
              "word": "and ",
            },
            Object {
              "idx": 80,
              "timestamp": 25.019,
              "word": "to ",
            },
            Object {
              "idx": 81,
              "timestamp": 25.71,
              "word": "people ",
            },
            Object {
              "idx": 82,
              "timestamp": 25.8,
              "word": "across ",
            },
            Object {
              "idx": 83,
              "timestamp": 26.13,
              "word": "the ",
            },
            Object {
              "idx": 84,
              "timestamp": 26.31,
              "word": "country ",
            },
            Object {
              "idx": 85,
              "timestamp": 26.64,
              "word": "who ",
            },
            Object {
              "idx": 86,
              "timestamp": 26.67,
              "word": "have ",
            },
            Object {
              "idx": 87,
              "timestamp": 26.939,
              "word": "submitted ",
            },
            Object {
              "idx": 88,
              "timestamp": 27.51,
              "word": "questions ",
            },
            Object {
              "idx": 89,
              "timestamp": 28.17,
              "word": "online. ",
            },
          ],
          "youtubeId": "ApTLB76Nmdg",
        }
      }
    />
  </div>
</div>
`;
